--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "email": "gregory.beirens@gmail.com"
   },
   "main": "dist/xAssist-eventdispatcher.js",
+  "module":"index",
   "scripts": {
     "pretest": "rimraf dist  && rollup -c",
     "test": "istanbul cover node_modules/tape/bin/tape test/**/*-test.js && eslint index.js src",
